fix text bleed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -654,7 +654,7 @@ table tfoot {
 table.alt tbody tr td {
   border-color: rgba(0, 0, 0, 0.25); }
 
-/* Highlights 
+ Highlights 
 .videoWrapper {
   width: 100%;
   margin: 2.5rem 0;
@@ -670,11 +670,11 @@ table.alt tbody tr td {
   -webkit-align-items: -webkit-stretch;
   -ms-align-items: -ms-stretch;
   align-items: stretch; }
-*/
+
   .videoWrapper {
     position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
-    height: 0;
+    padding-bottom: 25%; /* 16:9 */
+    height: 1;
     margin: 2.5rem 0;
   }
   .videoWrapper iframe {
